Complete Blog Feature Implementation & Production Deployment
✨ New Features:
- Full-stack blog system with create, read, list functionality
- User authentication required for blog access
- @mention functionality in blog posts
- Comment system for blog interactions
- Member lookup by username API endpoint
- Enhanced security with ABAC policy evaluation

🔧 Backend Improvements:
- BlogController with comprehensive CRUD operations
- BlogService with detailed debug logging and validation
- MemberController getMemberByUsername endpoint
- Enhanced exception handling and error responses
- Audit logging for all blog operations
- Database migrations for blog and comment tables

🎨 Frontend Enhancements:
- BlogCreate.vue with rich text editor and @mention
- Blog.vue listing page with pagination
- BlogDetail.vue for individual blog viewing
- Fixed apiClient references in all services
- Responsive design improvements
- Authentication state management

🚀 Production Infrastructure:
- Docker containerization with health checks
- AWS EC2 deployment configuration
- Duck DNS domain management
- SSL certificate handling
- PostgreSQL production database
- Nginx reverse proxy setup

📝 Documentation:
- Comprehensive API documentation
- Deployment guides and troubleshooting
- Database schema documentation
- Frontend implementation summaries

🔨 Build & Deployment:
- Maven POM updates with new dependencies
- Dockerfile optimization for production
- Docker Compose production configuration
- Automated backup and restore scripts
- CI/CD pipeline improvements

This commit represents the complete implementation of the blog feature
from initial conception through production deployment, including all
necessary infrastructure, security, and monitoring components.